# console-pipeline-template

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: bridge-index.yml
first_pipeline/: steps.py
