[project]
name = "first-pipeline-starter"
version = "0.1.0"
description = "Bridge SDK starter: one programmatic step + one agent step"
requires-python = ">=3.11"
dependencies = [
    "bridge-sdk @ git+https://github.com/poolsideai/bridge-sdk.git",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["first_pipeline"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.bridge]
modules = ["first_pipeline.steps"]
